log
Fri 23 Sep 2022 03:36:23 PM UTC: 
 tests:  1|8
total_score: 0/70
7fea9b3
Fri 23 Sep 2022 03:43:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: expected expression before ‘return’
   42 |     return NULL;
      |     ^~~~~~
treemap.c:40:12: error: unused variable ‘newTree’ [-Werror=unused-variable]
   40 |   TreeMap *newTree  = (TreeMap)
      |            ^~~~~~~
treemap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
674b3ce
Fri 23 Sep 2022 03:47:17 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: ‘newTree’ undeclared (first use in this function)
   41 |   newTree->root = NULL;
      |   ^~~~~~~
treemap.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
70e9ae9
Fri 23 Sep 2022 03:47:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
e650752
Fri 23 Sep 2022 04:08:23 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:6: error: expected expression before ‘TreeNode’
   51 |   if(TreeNode->root ==NULL)
      |      ^~~~~~~~
treemap.c:55:6: error: expected expression before ‘)’ token
   55 |   if()
      |      ^
treemap.c: In function ‘minimum’:
treemap.c:62:9: error: expected expression before ‘)’ token
   62 |   while()
      |         ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:15: error: ‘TreeMap’ has no member named ‘lowe_than’; did you mean ‘lower_than’?
   86 |     if (tree->lowe_than(tree->current->pair->key,key)){
      |               ^~~~~~~~~
      |               lower_than
treemap.c:87:22: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
   87 |       tree->current->rigth;//va comparando si es menor
      |                      ^~~~~
      |                      right
treemap.c:94:10: error: ‘aux’ undeclared (first use in this function)
   94 |   return aux->pair
      |          ^~~
treemap.c:94:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:94:19: error: expected ‘;’ before ‘}’ token
   94 |   return aux->pair
      |                   ^
      |                   ;
   95 | }
      | ~                  
treemap.c: In function ‘minimum’:
treemap.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
745a7e9
Fri 23 Sep 2022 04:08:44 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:6: error: expected expression before ‘)’ token
   54 |   if()
      |      ^
treemap.c: In function ‘minimum’:
treemap.c:61:9: error: expected expression before ‘)’ token
   61 |   while()
      |         ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:15: error: ‘TreeMap’ has no member named ‘lowe_than’; did you mean ‘lower_than’?
   85 |     if (tree->lowe_than(tree->current->pair->key,key)){
      |               ^~~~~~~~~
      |               lower_than
treemap.c:86:22: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
   86 |       tree->current->rigth;//va comparando si es menor
      |                      ^~~~~
      |                      right
treemap.c:93:10: error: ‘aux’ undeclared (first use in this function)
   93 |   return aux->pair
      |          ^~~
treemap.c:93:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:93:19: error: expected ‘;’ before ‘}’ token
   93 |   return aux->pair
      |                   ^
      |                   ;
   94 | }
      | ~                  
treemap.c: In function ‘minimum’:
treemap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
956e970
Fri 23 Sep 2022 04:09:08 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:61:9: error: expected expression before ‘)’ token
   61 |   while()
      |         ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:15: error: ‘TreeMap’ has no member named ‘lowe_than’; did you mean ‘lower_than’?
   85 |     if (tree->lowe_than(tree->current->pair->key,key)){
      |               ^~~~~~~~~
      |               lower_than
treemap.c:86:22: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
   86 |       tree->current->rigth;//va comparando si es menor
      |                      ^~~~~
      |                      right
treemap.c:93:10: error: ‘aux’ undeclared (first use in this function)
   93 |   return aux->pair
      |          ^~~
treemap.c:93:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:93:19: error: expected ‘;’ before ‘}’ token
   93 |   return aux->pair
      |                   ^
      |                   ;
   94 | }
      | ~                  
treemap.c: In function ‘minimum’:
treemap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:94:1: error: control reaches end of non-void function [-Werror=return-type]
   94 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7de3a15
Fri 23 Sep 2022 04:09:38 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:15: error: ‘TreeMap’ has no member named ‘lowe_than’; did you mean ‘lower_than’?
   86 |     if (tree->lowe_than(tree->current->pair->key,key)){
      |               ^~~~~~~~~
      |               lower_than
treemap.c:87:22: error: ‘TreeNode’ has no member named ‘rigth’; did you mean ‘right’?
   87 |       tree->current->rigth;//va comparando si es menor
      |                      ^~~~~
      |                      right
treemap.c:94:10: error: ‘aux’ undeclared (first use in this function)
   94 |   return aux->pair
      |          ^~~
treemap.c:94:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:94:19: error: expected ‘;’ before ‘}’ token
   94 |   return aux->pair
      |                   ^
      |                   ;
   95 | }
      | ~                  
treemap.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
761da8e
Fri 23 Sep 2022 04:11:29 PM UTC: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:14: error: ‘TreeMap’ has no member named ‘loweR_than’; did you mean ‘lower_than’?
   88 |     if(tree->loweR_than(tree->current->pair->key,key)){
      |              ^~~~~~~~~~
      |              lower_than
treemap.c:89:22: error: ‘TreeNode’ has no member named ‘righT’; did you mean ‘right’?
   89 |       tree->current->righT;//va comparando si es menor
      |                      ^~~~~
      |                      right
Compilation failed
025e90e
